@@ -1,3 +1,7 @@
+2006-09-06  Simon Josefsson  <jas@extundo.com>
+
+	* mail/smtpmail.el (smtpmail-starttls-credentials): Doc fix.
+
 2006-09-06  Nick Roberts  <nickrob@snap.net.nz>
 
 	* progmodes/gdb-ui.el (gdb-var-list-children-regexp)
